# Mechan

./: .gitignore  CMakeLists.txt  Makefile  README.md  base_dialog_windows.cpp  base_extended_synonym.cpp  base_morphology.cpp  base_reduced_vector.cpp  base_synonym.cpp  build.bat  build.sh  mechan_config  mechand_cmd_wrapper.cpp  mechand_td_wrapper.cpp  td_example.cpp  tdd.cpp  tdjson_example.cpp
header/: dialog_extracter.h  lowercase.h  lowercase_char.h  mechan.h  mechan_character.h  mechan_config.h  mechan_console_interface.h  mechan_core.h  mechan_dialog.h  mechan_directory.h  mechan_index.h  mechan_interface.h  mechan_log_interface.h  mechan_lowercase.h  mechan_morphology.h  mechan_neuro.h  mechan_parse.h  mechan_pipe_interface.h  mechan_socket.h  mechan_synonym.h  mechan_telegram_interface.h  mechan_word.h  mechand.h  morphology.h  parse.h
source/: base_dialog_linux.cpp  base_morphology.cpp  base_statistics.cpp  base_vector.cpp  dialog_extracter.cpp  lowercase.cpp  lowercase_char.cpp  mechan.cpp  mechan_character.cpp  mechan_command.cpp  mechan_config.cpp  mechan_console_interface.cpp  mechan_core.cpp  mechan_dialog.cpp  mechan_dialog_downloader.cpp  mechan_interface.cpp  mechan_ir_implement.cpp  mechan_ironic.cpp  mechan_log_interface.cpp  mechan_lowercase.cpp  mechan_morphology.cpp  mechan_neuro.cpp  mechan_neuro_train.cpp  mechan_parse.cpp  mechan_pipe_interface.cpp  mechan_socket.cpp  mechan_synonym.cpp  mechan_telegram_interface.cpp  mechan_trainer.cpp  mechan_word.cpp  mechand.cpp  parse.cpp
